--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -1,5 +1,5 @@
 
 <ul>
 
-     <li *ngFor="let list of lista">{{list.descricao}}, {{list.preco}}</li>
+     <li *ngFor="let list of lista">{{list.descricao}}, {{list.preco}}, {{list.quantidade}}</li>
 </ul>
