--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,27 +1,28 @@
-       <div class="navbar-header">
-           <header >
+<header >
         <h1>Pet Mania Club</h1>
-                 <h2>Produtos para o seu melhor amigo</h2>
+            <h2>Produtos para o seu melhor amigo</h2>
         <p class="sacola">
-            <a href="../compras-listagem/compras-listagem.component.html">
-<img border="0" alt="cabeçalho" src="../../assets/img/petlogo.png" width="100" height="100"></a>
+        <a href="../compras-listagem/compras-listagem.component.html">
+    <img border="0" alt="cabeçalho" src="../../assets/img/petlogo.png" width="100" height="100"></a>
             
         </p>
-        <nav class="menu-inicial">
-            <ul>
-                <li>
-                    <a href="login">Login</a>
-                </li>
-                <li>
-                    <a href="#">Sobre</a>
-                </li>
-                <li>
-                    <a href="carrinho">Carrinho</a>
-                </li>
-                <li>
-                    <a href="cadastro">Cadastro de usuários</a>
-                </li>
-            </ul>
-        </nav>
+        <ul class="nav navbar-nav">
+            <nav class="menu-inicial">
+                <ul>
+                    <li>
+                        <a (click)="validaLogoff()" href="login">{{msglogin}}</a>
+                    </li>
+                    <li>
+                        <a href="#">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="carrinho">Carrinho</a>
+                    </li>
+                    <li>
+                        <a href="cadastro">{{msgdados}}</a>
+                    </li>
+                </ul>
+            </nav>
+        </ul>
     </header>
-       </div>
+
