--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,44 @@
- <div class="wrapper">
- <app-header></app-header>
-  <div class="content-wrapper">
-    <div class="container">
 
+<div class="wrapper">
+ <app-header></app-header>
+  <!--div class="content-wrapper"-->
+
+  
+  
+<div class="container-fluid text-center">    
+  
+  <div class="row content">
+     <div class="col-sm-2 sidenav">
+      <p><a href="#">Link</a></p>
+      <p><a href="#">Link</a></p>
+      <p><a href="#">Link</a></p>
+    </div>
+       <div class="col-sm-8 text-left"> 
+    <router-outlet></router-outlet>
+    </div>
+
+  </div>
+</div>
+
+    <!--div class="container">
+
+       <div class="col-sm-2 sidenav">
+      <p><a href="#">Link</a></p>
+      <p><a href="#">Link</a></p>
+      <p><a href="#">Link</a></p>
+    </div>
+    <div class="col-sm-8 text-left"> 
       <router-outlet></router-outlet>
+    </div-->
+    <!--/div-->
+ 
+
+
+      <!--router-outlet></router-outlet>
 
     </div>
   </div>
- </div>
+ </div-->
 <!--app-vendas-principal></app-vendas-principal>
 <app-carrinho></app-carrinho>
 <app-cadastro></app-cadastro-->
