--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -1,5 +1,28 @@
+ <div class="panel panel-warning ">
+        <div class="panel-heading"><h3>Produtos no seu Carrinho</h3></div>
 
-<ul>
+<table class="table table-hover">
+    <!--thead>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+     <tbody-->
 
-     <li *ngFor="let list of lista">{{list.descricao}}, {{list.preco}}, {{list.quantidade}}</li>
-</ul>
+        <tr *ngFor="let list of lista">
+        <td>{{list.descricao}}</td>
+        <td>{{list.preco}}</td>
+        <td>{{list.quantidade}}</td>
+        <td>
+            <button class="btn" (onClick)="getIdProduto">Editar</button>
+            <button class="btn">Excluir</button>
+        </td>
+      </tr>
+    
+     </tbody>
+</table>
+    <button class="btn my-button-space" type="button" (click)="inserirCompra()">Finalizar Compra</button>
+
+ </div>
