--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,60 @@
-<header >
-        <h1>Pet Mania Club</h1>
-            <h2>Produtos para o seu melhor amigo</h2>
-        <p class="sacola">
-        <a href="../compras-listagem/compras-listagem.component.html">
-    <img border="0" alt="cabeçalho" src="../../assets/img/petlogo.png" width="100" height="100"></a>
+
+
+        <header>
+           <!--nav class="page-header"-->
+            <div class="jumbotron">
+                <div class="container text-center">
+                                        <h1 >Pet Mania Club</h1>
+                    <h2>Produtos para o seu melhor amigo</h2>
+               
+                </div>
+             </div>
+           <!--/nav-->
+        </header>
+
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand glyphicon glyphicon-home" href="#"  ></a>
             
-        </p>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>                        
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            
         <ul class="nav navbar-nav">
-            <nav class="menu-inicial">
-                <ul>
-                    <li>
-                        <a (click)="validaLogoff()" href="login">{{msglogin}}</a>
-                    </li>
-                    <li>
-                        <a href="#">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="carrinho">Carrinho</a>
-                    </li>
-                    <li>
-                        <a href="cadastro">{{msgdados}}</a>
-                    </li>
-                </ul>
-            </nav>
+            <li>
+                            <a (click)="validaLogoff()" href="login">{{msglogin}}</a>
+                        </li>
+                        <li>
+                            <a href="#">Sobre</a>
+                        </li>
+                        <li>
+                            <a href="carrinho">Carrinho</a>
+                        </li>
+                        <li>
+                            <a href="cadastro">{{msgdados}}</a>
+                        </li>
         </ul>
-    </header>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="carrinho"><span class="glyphicon glyphicon-shopping-cart"></span> Carrinho</a></li>            
+            <li><a href="cadastro"><span class="glyphicon glyphicon-user"></span> {{msgdados}}</a></li>            
+            <li><a (click)="validaLogoff()"  href="login"><span class="glyphicon glyphicon-log-in"></span> {{msglogin}}</a></li>
+        </ul>
+        </div>
+    </div>
+</nav>
+
+
+
+
+
+
+
+
+
+
 
