funcões do cadastro trasferidas para servico

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,10 @@
   
   <div class="row content">
      <div class="col-sm-2 sidenav">
+       <!-- Futuro menu de categorias-->
+      <!--p><a href="#">Link</a></p>
       <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
+      <p><a href="#">Link</a></p-->
     </div>
        <div class="col-sm-8 text-left"> 
     <router-outlet></router-outlet>
@@ -20,25 +21,4 @@
   </div>
 </div>
 
-    <!--div class="container">
-
-       <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-    </div>
-    <div class="col-sm-8 text-left"> 
-      <router-outlet></router-outlet>
-    </div-->
-    <!--/div-->
  
-
-
-      <!--router-outlet></router-outlet>
-
-    </div>
-  </div>
- </div-->
-<!--app-vendas-principal></app-vendas-principal>
-<app-carrinho></app-carrinho>
-<app-cadastro></app-cadastro-->
